--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Este es un sitio web con Github Pages</h1>
 <p>Fue creado por juan sebastian leal Estudiante de Ing mecatronica</p> 
 <p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
+<p><img src="https://media.giphy.com/media/26ufffYiDvk14EUfu/giphy.gif"/></p>
