se creo con sintaxis htm

--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>Fue creado por juan sebastian leal Estudiante de Ing mecatronica</p> 
-<p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
-<p><img src="https://media.giphy.com/media/26ufffYiDvk14EUfu/giphy.gif"/></p>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+
+        <title>
+            Juan Leal
+        </title>
+        <meta name="viwport" content="width=device-width, inicial-scake=1.0">
+
+    </head>
+
+    <body>
+        <h1>Este citio se encuentra en construccion por el momento sentiemos los inconvenientes</h1>
+    </body>
+</html>
+
+
+
